infra/clusters/talos/apps/eurooffice/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: eurooffice
  namespace: nextcloud
spec:
  selector:
    app: eurooffice
  ports:
    - port: 80
      targetPort: 80
